--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <br>
             <br>
 
-            <form action="">
+            <form id="contactform" action="https://formspree.io/f/mleaozkd" method="POST">
                 <label for="name">*Name:</label>
                 <br>
                 <input type="text" id="name" name="name" required>
