--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,10 @@
         <br>
         <h3>What have you learned about Melanie?</h3>
         <div id="quiz"></div>
-        <button id="submit">Submit Quiz</button>
+        <button   
+                id="submit"
+                action="https://formspree.io/f/mvodvlnv"
+                method="POST" >Submit Quiz</button>
         <div id="results"></div>
 
 
