--- a/index.html
+++ b/index.html
@@ -113,27 +113,27 @@
 
         <div>
             <h3>More Information</h3>
-            <button class="accordion">First Section</button>
+            <button class="accordion">Research Topic</button>
 
             <div class="panel">
 
-            <p> Your text will be displayed here. Enter relevant content...</p>
+            <p> Content will be added soon </p>
 
             </div>
 
-            <button class="accordion">Second Section</button>
+         <!--    <button class="accordion">Second Section</button> 
 
-            <div class="panel">
+             <div class="panel"> 
 
-            <p> Your text will be displayed here. Enter relevant content...</p>
+         <p> Your text will be displayed here. Enter relevant content...</p> -->
 
-            </div>
+         <!--    </div> 
 
-            <button class="accordion">Third section</button>
+           <button class="accordion">Third section</button> 
 
-            <div class="panel">
+           <div class="panel"> 
 
-            <p>Your text will be displayed here. Enter relevant content...</p>
+           <p>Your text will be displayed here. Enter relevant content...</p> -->
 
             </div>
         </div>
