--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <br><em>Frontiers in bioengineering and biotechnology 7, 184</em></td>
                         <td>QUT/FAU Scholarship</td>
                         <td>Postgraduate Symposium
-                            <br>School of Biomedical Sciences (Faculaty of Health, QUT)
+                            <br>School of Biomedical Sciences (Faculty of Health, QUT)
                             <br>September 2019, Brisbane, Australia
                         </td>
                     </tr>
