--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <tr>
                         <td>Ultra-low-cost 3D bioprinting: modification and application of an off-the-shelf desktop 3D-printer for biofabrication
                             <br>M Kahl, M Gertig, P Hoyer, O Friedrich, DF Gilbert
-                            <br><em>Frontiers in bioengineering and biotechnology 7, 184</em></td>
+                            <br><em>Frontiers in bioengineering and biotechnology 7, 184</em>, 2019</td>
                         <td>QUT/FAU Scholarship</td>
                         <td>Postgraduate Symposium
                             <br>School of Biomedical Sciences (Faculty of Health, QUT)
@@ -92,14 +92,21 @@
                     <tr>
                         <td>An open source technology platform to manufacture hydrogel-based 3D culture models in an automated and standardized fashion
                             <br>S Eggert, M Kahl, R Kent, N Bock, C Meinert, DW Hutmacher
-                            <br><em>J. Vis. Exp. 61261</em> </td>
+                            <br><em>J. Vis. Exp. 61261</em>, 2021 </td>
                         <td>QUT Tuition Fee Scholarship</td>
                         <td></td>
                     </tr>
                     <tr>
                         <td>An open-source technology platform to increase reproducibility and enable high-throughput production of tailorable gelatin methacryloyl (GelMA)-based hydrogels
                             <br>S Eggert, M Kahl, N Bock, C Meinert, O Friedrich, DW Hutmacher
-                            <br><em>Materials & Design 204, 109619</em></td>
+                            <br><em>Materials & Design 204, 109619</em>, 2021</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>MechAnalyze - an algorithm for standardization and automation of compression test analysis
+                            <br>M Kahl, D Schneidereit, N Bock, O Friedrich, DW Hutmacher, C Meinert
+                            <br><em>Tissue Engineering, Part C: Methods</em>, 2021</td>
                         <td></td>
                         <td></td>
                     </tr>
